<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="center"
        android:textSize="32dp"
        android:background="@color/backround_main"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMainTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/green"
        android:text="@string/login"
        android:layout_marginVertical="20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUser"
        app:layout_constraintTop_toBottomOf="@+id/tvLogIn"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/backround_main"
        android:backgroundTint="@color/backround_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/hintName"
        android:textColorHint="@color/backround_main"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etReserv"
        app:layout_constraintTop_toBottomOf="@+id/etUser"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/backround_main"
        android:backgroundTint="@color/backround_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/hintReserv"
        android:textColorHint="@color/backround_main"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/etReserv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:background="@color/backround_main"
        android:text="@string/logbtn"
        android:textSize="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>